--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,6 @@
     <string name="date_picker_title">Date of Crime:</string>
     <string name="crime_title">Crime Title</string>
     <string name="crime_date">Crime Date</string>
+    <string name="jump_to_first">Jump to first</string>
+    <string name="jump_to_last">Jump to last</string>
 </resources>
