--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,5 @@
     <string name="crime_date">Crime Date</string>
     <string name="jump_to_first">Jump to first</string>
     <string name="jump_to_last">Jump to last</string>
+    <string name="contact_police">Contact Police</string>
 </resources>
