--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,6 +7,7 @@
     <string name="date_picker_title">Date of Crime:</string>
     <string name="crime_title">Crime Title</string>
     <string name="crime_date">Crime Date</string>
+    <string name="crime_time">Crime Time</string>
     <string name="jump_to_first">Jump to first</string>
     <string name="jump_to_last">Jump to last</string>
     <string name="contact_police">Contact Police</string>
